# us-sim

./: .env.example  .gitignore  .gitmodules  KWAVE_SETUP_COMPLETE.md  README.md  development-plan.md
backend/: create_synthetic_head.py  pyproject.toml
backend/app/: bmode_processor.py  engine_runs.py  main.py  matlab_config.py  models.py  phantom_data.py  settings.py  simulation_engines.py  tusx_handoff.py  tusx_runner.py
backend/app/reconstruction/: __init__.py  channel_data.py
docs/: baseline-phantom-spec.md  benchmark-altered-focal-depth.json  benchmark-off-angle.json  benchmark-temporal-window.json  chat-backup-2026-03-30.md  implementation-roadmap.md  kwave-integration-setup.md  physics-assumptions.md  receive-channel-data-schema.md  restore-instructions.md  tusx-handoff-schema.md  tusx-integration-plan.md  ultrasound-reconstruction-readme.md  validation-benchmarks.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: SimulationWorkbench.tsx  ViewportScene.tsx
frontend/lib/: anatomy.ts  probePose.ts
frontend/public/anatomy/: bodyparts3d-head-metadata.json  phantom.manifest.json  tissue-properties.json  xcat-proxy.model.json
scripts/: ct_surface_utils.py  export_synthetic_head_surface.py  import_bodyparts3d_head_metadata.py  import_brainweb_head_surface.py  import_cq500_head_surface.py  import_ct_head_surface.py  matlab_startup.m  run_tusx_wrapper.py  start_services.sh  stop_services.sh  tusx_matlab_launcher.m  tusx_runner_stub.py
