[project]
name = "us-sim-backend"
version = "0.1.0"
description = "FastAPI backend for ultrasound head simulation research tooling."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.10,<3.0",
  "nibabel>=5.0,<6.0",
  "numpy>=1.24,<2.0",
  "scipy>=1.10,<2.0",
  "matplotlib>=3.6,<4.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

